==> Thiankgo/teste_vs1053_espidf/src/vs1053.cpp <==
#include "vs1053.h"

void VS1053_t::control_mode_on() {
  gpio_set_level((gpio_num_t)dcs_pin, HIGH);  // Bring slave in control mode
  gpio_set_level((gpio_num_t)cs_pin, LOW);
}

void VS1053_t::control_mode_off() {
  gpio_set_level((gpio_num_t)cs_pin, HIGH);  // End control mode
}

bool VS1053_t::testComm(bool fast) {
  // Test the communication with the VS1053 module.  The result wille be returned.
  // If DREQ is low, there is problably no VS1053 connected.	Pull the line true
  // in order to prevent an endless loop waiting for this signal.  The rest of the
  // software will still work, but readbacks from VS1053 will fail.
  int i;  // Loop control
  uint16_t r1, cnt = 0;
  uint16_t delta = 300;  // 3 for fast SPI

  if (!gpio_get_level((gpio_num_t)dreq_pin)) {
    ESP_LOGW(TAG, "VS1053 not properly installed!");
    // Allow testing without the VS1053 module
    // pinMode(dreq_pin, INPUT_PULLUP); // DREQ is now input with pull-up
    return false;  // Return bad result
  }
  // Further TESTING.  Check if SCI bus can write and read without errors.
  // We will use the volume setting for this.
  // Will give warnings on serial output if DEBUG is active.
  // A maximum of 20 errors will be reported.
  if (fast) {
    delta = 9;  // Fast SPI, more loops
  }

  for (i = 0; (i < 0xFFFF) && (cnt < 20); i += delta) {
    write_register(SCI_VOL, i);   // Write data to SCI_VOL
    r1 = read_register(SCI_VOL);  // Read back for the first time
    if (i != r1)                  // Check for 2 equal reads
    {
      ESP_LOGW(TAG, "VS1053 error retry SB:%04X R1:%04X", i, r1);
      cnt++;
      vTaskDelay(pdMS_TO_TICKS(10));
    }
    taskYIELD();  // Allow ESP firmware to do some bookkeeping
  }
  return (cnt == 0);  // Return the result
}

void VS1053_t::setVolume(uint8_t vol) {
  // Set volume.	Both left and right.
  // Input value is 0..100.  100 is the loudest.
  uint16_t value;  // Value to send to SCI_VOL

  curvol = vol;                          // Save for later use
  value = map(vol, 0, 100, 0xFF, 0x00);  // 0..100% to one channel
  value = (value << 8) | value;
  write_register(SCI_VOL, value);  // Volume left and right
}

void VS1053_t::stopSong() {
  uint16_t modereg;  // Read from mode register
  int i;             // Loop control

  sdi_send_fillers(2052);
  delay(10);
  write_register(SCI_MODE, _BV(SM_SDINEW) | _BV(SM_CANCEL));
  for (i = 0; i < 200; i++) {
    sdi_send_fillers(32);
    modereg = read_register(SCI_MODE);  // Read status
    if ((modereg & _BV(SM_CANCEL)) == 0) {
      sdi_send_fillers(2052);
      ESP_LOGI(TAG, "Song stopped correctly after %d msec", i * 10);
      return;
    }
    delay(10);
  }
  // printDetails( "Song stopped incorrectly!");
}

void VS1053_t::softReset() {
  ESP_LOGI(TAG, "Performing soft-reset");
  write_register(SCI_MODE, _BV(SM_SDINEW) | _BV(SM_RESET));
  delay(10);
  await_data_request();
}

void VS1053_t::switchToMp3Mode() {
  wram_write(0xC017, 3);  // GPIO DDR = 3
  wram_write(0xC019, 0);  // GPIO ODATA = 0
  delay(100);
  ESP_LOGI(TAG, "Switched to mp3 mode");
  softReset();
}
