==> cuu/PicoMite/VS1053.c <==
#include "MMBasic_Includes.h"
#include "Hardware_Includes.h"
#include "vs1053.h"
#include "vs1053b-patches.h"
#define LOG(...)
#define _BV( bit ) ( 1<<(bit) )
#define xmit_multi(a,b) spi_write_blocking((AUDIO_SPI==1 ? spi0 : spi1),a,b);

void control_mode_on() {
        gpio_put(dcs_pin,GPIO_PIN_SET);
        gpio_put(cs_pin,GPIO_PIN_RESET);
}

void control_mode_off()  {
        gpio_put(cs_pin,GPIO_PIN_SET);
}

bool testComm(const char *header) {
    // Test the communication with the VS1053 module.  The result wille be returned.
    // If DREQ is low, there is problably no VS1053 connected.  Pull the line HIGH
    // in order to prevent an endless loop waiting for this signal.  The rest of the
    // software will still work, but readbacks from VS1053 will fail.
    int i; // Loop control
    uint16_t r1, r2, cnt = 0;
    uint16_t delta = 300; // 3 for fast SPI
    uSec(20000);
    if (!gpio_get(dreq_pin)) {
        error("VS1053 not properly installed!");
        // Allow testing without the VS1053 module
//        pinMode(dreq_pin, INPUT_PULLUP); // DREQ is now input with pull-up
        return false;                    // Return bad result
    }
    // Further TESTING.  Check if SCI bus can write and read without errors.
    // We will use the volume setting for this.
    // Will give warnings on serial output if DEBUG is active.
    // A maximum of 20 errors will be reported.
    if (strstr(header, "Fast")) {
        delta = 30; // Fast SPI, more loops
    }

    LOG("%s", header);  // Show a header

    for (i = 0; (i < 0xFFFF) && (cnt < 20); i += delta) {
        writeRegister(SCI_VOL, i);         // Write data to SCI_VOL
        r1 = read_register(SCI_VOL);        // Read back for the first time
        r2 = read_register(SCI_VOL);        // Read back a second time
        if (r1 != r2 || i != r1 || i != r2) // Check for 2 equal reads
        {
            error("VS1053 read failure");
            cnt++;
            uSec(10000);
        }
    }
    return (cnt == 0); // Return the result
}

void setVolume(uint8_t vol) {
    // Set volume.  Both left and right.
    // Input value is 0..100.  100 is the loudest.
    uint8_t valueL, valueR; // Values to send to SCI_VOL

    curvol = vol;                         // Save for later use
    valueL = vol;
    valueR = vol;

    if (curbalance < 0) {
        valueR = stdmax(0, vol + curbalance);
    } else if (curbalance > 0) {
        valueL = stdmax(0, vol - curbalance);
    }

    valueL = stdmap(valueL); // 0..100% to left channel
    valueR = stdmap(valueR); // 0..100% to right channel
    writeRegister(SCI_VOL, (valueL << 8) | valueR); // Volume left and right
}

void stopSong() {
    uint16_t modereg; // Read from mode register
    int i;            // Loop control

    sdi_send_fillers(2052);
    uSec(10000);
    writeRegister(SCI_MODE, _BV(SM_SDINEW) | _BV(SM_CANCEL));
    for (i = 0; i < 200; i++) {
        sdi_send_fillers(32);
        modereg = read_register(SCI_MODE); // Read status
        if ((modereg & _BV(SM_CANCEL)) == 0) {
            sdi_send_fillers(2052);
            LOG("Song stopped correctly after %d msec\r\n", i * 10);
            return;
        }
        uSec(10000);
    }
    printDetails("Song stopped incorrectly!");
}

void softReset() {
    LOG("Performing soft-reset\r\n");
    writeRegister(SCI_MODE, _BV(SM_SDINEW) | _BV(SM_RESET | _BV(SM_LAYER12)));
    uSec(10000);
    await_data_request();
}

void switchToMp3Mode() {
    wram_write(ADDR_REG_GPIO_DDR_RW, 3); // GPIO DDR = 3
    wram_write(ADDR_REG_GPIO_ODATA_RW, 0); // GPIO ODATA = 0
    uSec(10000);
    LOG("Switched to mp3 mode\r\n");
    softReset();
}
